# CeresAudio

./: .gitignore  CeresAudio.sln  LICENSE  README.md
CeresAudio/: CeresAudio.csproj  NativeAudio.cs
CeresAudio/BasicDriver/: BasicAudioDriver.cs
CeresAudio/CubebBinding/: Channel.cs  Cubeb.cs  CubebStream.cs  IStreamDelegate.cs  Result.cs  SampleFormat.cs  State.cs  StreamParams.cs  StreamPrefs.cs
Example/: Example.csproj  Program.cs
nativeaudio/: CMakeLists.txt  mutex.h  mutex_posix.c  mutex_win.c  naprivate.h  nativeaudio.c  nativeaudio.h  ringbuffer.c  ringbuffer.h  test.c
